Fixed Dashboard Widget alignment and plugin's page URL

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,4 +122,8 @@
 
     width: 100%;
 
+    margin: 0;
+
+    float: none;
+
 }
